add json validate

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -16,3 +16,7 @@ jobs:
       name: Validate Katacoda scenarios
       run: |
         katacoda validate:all --repo ${{ github.workspace }}
+    - id: validate
+      name: Validate json files
+      run: |
+        python json-validate.py
